modified sln to include test project

--- a/MyHelloWorldTest/MyHelloWorldTest.csproj
+++ b/MyHelloWorldTest/MyHelloWorldTest.csproj
@@ -50,8 +50,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    
+    <Compile Include="ProgramTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MyHelloWorld\MyHelloWorld.csproj">
+      <Project>{eba38467-aa94-48e6-a14b-74adebb150f0}</Project>
+      <Name>MyHelloWorld</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
