--- a/MyHelloWorldTest/MyHelloWorldTest.csproj
+++ b/MyHelloWorldTest/MyHelloWorldTest.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MyHelloWorldLib">
+      <HintPath>..\MyHelloWorldLib\bin\Debug\MyHelloWorldLib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -52,12 +55,6 @@
   <ItemGroup>
     <Compile Include="ProgramTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MyHelloWorld\MyHelloWorld.csproj">
-      <Project>{eba38467-aa94-48e6-a14b-74adebb150f0}</Project>
-      <Name>MyHelloWorld</Name>
-    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
